--- a/style/app.css
+++ b/style/app.css
@@ -12,12 +12,10 @@ ng\:form {
 
 body {
     background-color: #eee;
-    font-family: 'Actor', sans-serif;
+    font-family: 'Lato';
     color: #444;
     width: 100%;
     height: 100%;
-    background-image: url('./img/philly.jpg');
-
 }
 
 #datetime {
@@ -69,4 +67,124 @@ body {
     border: 1px solid #333;
     padding: 3px;
     overflow: auto;
+}
+
+.topgradient{
+    height: 350px;
+    width: 100%;
+    margin: 0px;
+    top: 0;
+    left: 0;
+    position: absolute;
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.6), transparent);
+}
+
+.top-left-header{
+    padding: 20px 0px 0px 40px;
+    font-weight: 300;
+    font-size: 65px;
+    opacity: 0.70;
+    color: white;
+}
+
+.top-right-header{
+    padding: 30px 50px 0px 00px;
+    font-weight: 300;
+    font-size: 40px;
+    opacity: 0.70;
+    color: white;
+    display: block;
+}
+
+.top-right-header span{
+    display: block;
+}
+
+.temp-text{
+    color: white;
+    opacity: 0.9;
+    font-weight: 300;
+}
+
+.today-temp-text{
+    font-size: 190px;
+    margin: -20px 0px 0px 40px;
+    float: left;
+}
+
+.normal-day-temp-text{
+    font-size: 70px;
+    margin: 20px 0px 0px 5px;
+    text-align: center;
+    width: 100%;
+
+}
+
+.weather-icon{
+
+
+    opacity: 0.9;
+
+}
+
+.today-weather-icon{
+    margin: 20px 0px 0px 50px;
+    float: left;
+    height: 18vh;
+}
+
+.normal-day-weather-icon{
+    margin: 20px 0px 0px 0px;
+    height: 10vh;
+}
+
+.bottomcontainer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 33%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.65);
+
+}
+
+.today-container{
+    width: 33%;
+    float: left;
+}
+
+.normal-day-container{
+    margin: 15px 0px 0px 0px;
+    width: 22.33%;
+    color: white;
+    opacity: 0.9;
+    float: left;
+    border-left: solid rgba(255,255,255, 0.3) 1px;
+
+    text-align: center;
+}
+
+.normal-day-title{
+    font-size: 45px;
+    font-weight: 200;
+    margin: 10px 0px 0px 0px;
+    opacity: 0.8;
+    display: block;
+}
+
+.day{
+    color: white;
+    font-size: 45px;
+    font-weight: 200;
+    margin: 25px 0px 0px 40px;
+    opacity: 0.8;
+}
+
+.wunderground-logo{
+    position: absolute;
+    bottom: 10;
+    right: 10;
+    width: 80px;
+    padding: 5px;
+    opacity: 0.8;
 }
